src/widgets/blog/card/style.module.scss
@use "@bigtablet/design-system/scss/token" as token;

.blog_card {
  @include token.flex_column;
  background: token.$color_background;
  border: 1px solid token.$color_border;
  border-radius: token.$radius_lg;
  padding: token.$spacing_md;
  text-decoration: none;
  color: token.$text_normal;
  height: 100%;
  cursor: pointer;
  @include token.hover_lift(-4px, token.$shadow_elevated);

  &:hover {
    background: token.$color_background_secondary;
    border-color: token.$color_primary_hover;
  }
}

.blog_card_thumb {
  position: relative;
  width: 100%;
  aspect-ratio: 4 / 3;
  border-radius: token.$radius_md;
  overflow: hidden;
  background: token.$color_background_secondary;
  border: 1px solid token.$color_border;

  img {
    object-fit: cover;
    width: 100%;
    height: 100%;
    display: block;
  }
}

.blog_card_thumb_fallback {
  width: 100%;
  height: 100%;
  background: linear-gradient(
                  180deg,
                  token.$color_background_neutral,
                  token.$color_background_muted
  );
}

.blog_card_meta {
  display: flex;
  align-items: center;
  gap: token.$spacing_xs;
  margin-top: token.$spacing_sm;
  color: token.$text_subtle;
  font-size: token.$font_size_xs;
}

.blog_card_time {
  @include token.body_regular;
}

.blog_card_dot {
  opacity: 0.6;
}

.blog_card_views {
  font-size: token.$font_size_sm;
  font-weight: token.$font_weight_regular;
}

.blog_card_title {
  @include token.heading_3;
  font-size: token.$font_size_md;
  margin-top: token.$spacing_sm;
  color: token.$text_strong;
  word-break: break-word;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

.blog_card_excerpt {
  @include token.body_regular;
  font-size: token.$font_size_sm;
  margin-top: token.$spacing_xs;
  color: token.$text_subtle;
  display: -webkit-box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

